--- a/requirements.in
+++ b/requirements.in
@@ -1,14 +1,12 @@
-Django>3.0
-django-behaviors
-django-environ
-whitenoise
-
-django-environ
+Django==3.0.7
+django-behaviors==0.5.0
+django-environ==0.4.5
+django-filter==2.2.0
+django-healthchecks==1.4.2
+django-split-settings==1.0.1
 djangorestframework>=3.11.0
-drf-jwt
-django-filter
-
-django-healthchecks
-
-redis
-sentry-sdk
+drf-nested-routers==0.91
+drf-jwt==1.16.1
+psycopg2==2.8.5
+redis==3.5.0
+sentry-sdk==0.14.4
