--- a/dev-requirements.in
+++ b/dev-requirements.in
@@ -1,19 +1,6 @@
 -c requirements.txt
 
-ipython
-
-pytest-django>=3.9
-pytest-deadfixtures
-pytest-env
-pytest-freezegun
-pytest-mock
-pytest-randomly
-
-
-freezegun
-mixer
-
-jedi
+autopep8
 flake8-absolute-import
 flake8-bugbear
 flake8-commas
@@ -28,3 +15,15 @@ flake8-pytest
 flake8-pytest-style
 flake8-quotes
 flake8-variables-names
+freezegun
+ipython
+jedi
+mixer
+pytest-deadfixtures
+pytest-django>=3.9
+pytest-env
+pytest-freezegun
+pytest-mock
+pytest-randomly
+pytest-responses==0.4.0
+pytest-xdist==1.32.0
