--- a/src/pytest.ini
+++ b/src/pytest.ini
@@ -1,5 +1,5 @@
 [pytest]
-DJANGO_SETTINGS_MODULE = app.settings
+DJANGO_SETTINGS_MODULE = default.settings
 python_files = test*.py
 addopts = --reuse-db
 markers =
