--- a/requirements.in
+++ b/requirements.in
@@ -1,3 +1,4 @@
+celery==4.4.7
 Django==3.0.7
 django-behaviors==0.5.0
 django-environ==0.4.5
@@ -7,6 +8,8 @@ django-split-settings==1.0.1
 djangorestframework>=3.11.0
 drf-nested-routers==0.91
 drf-jwt==1.16.1
+flower==0.9.5
 psycopg2-binary==2.8.5
-redis==3.5.0
+redis==3.5.3
 sentry-sdk==0.14.4
+whitenoise==5.2.0
