--- a/dev-requirements.in
+++ b/dev-requirements.in
@@ -10,7 +10,7 @@ flake8-isort
 flake8-mock
 flake8-pie
 flake8-print
-flake8-printf-formatting
+flake8-printf-formatting==1.1.0
 flake8-pytest
 flake8-pytest-style
 flake8-quotes
